force-app/main/default/objects/Warranty_Claim__c/Warranty_Claim__c.object-meta.xml
<CustomObject>
    <label>Warranty Claim</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Warranty Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Claim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>