force-app/main/default/objects/Warranty_Claim__c/fields/Account_code__c.field-meta.xml
<CustomField>
    <fullName>Account_code__c</fullName>
    <label>Account code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>