force-app/main/default/objects/Warranty_Claim__c/fields/Additional_Time__c.field-meta.xml
<CustomField>
    <fullName>Additional_Time__c</fullName>
    <label>Additional Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>