force-app/main/default/objects/Warranty_Claim__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>