force-app/main/default/objects/Warranty_Claim__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>