force-app/main/default/objects/Warranty_Claim__c/fields/Application_Country__c.field-meta.xml
<CustomField>
    <fullName>Application_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>