force-app/main/default/objects/Warranty_Claim__c/fields/Application_Serial__c.field-meta.xml
<CustomField>
    <fullName>Application_Serial__c</fullName>
    <label>Application Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>