force-app/main/default/objects/Warranty_Claim__c/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <formula>End_Customer__r.BillingStreet &amp;BR()&amp;
End_Customer__r.BillingCity &amp; &quot;, &quot; &amp;
End_Customer__r.BillingState &amp; &quot; &quot; &amp;
End_Customer__r.BillingPostalCode &amp; BR() &amp;
End_Customer__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Location</label>
    <type>Text</type>
</CustomField>