force-app/main/default/objects/Warranty_Claim__c/fields/Boarding_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Lodging__c</fullName>
    <label>Boarding Lodging</label>
    <type>TextArea</type>
</CustomField>