force-app/main/default/objects/Warranty_Claim__c/fields/Causal_part__c.field-meta.xml
<CustomField>
    <fullName>Causal_part__c</fullName>
    <label>Causal part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>