force-app/main/default/objects/Warranty_Claim__c/fields/Claim_Justification__c.field-meta.xml
<CustomField>
    <fullName>Claim_Justification__c</fullName>
    <label>Claim Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>