force-app/main/default/objects/Warranty_Claim__c/fields/Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Amount__c</fullName>
    <label>Credit Note Amount (in GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>