force-app/main/default/objects/Warranty_Claim__c/fields/Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Warranty Claim</relationshipLabel>
    <relationshipName>Warranty_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>