force-app/main/default/objects/Warranty_Claim__c/fields/CWS_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ID__c</fullName>
    <label>CWS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>