force-app/main/default/objects/Warranty_Claim__c/fields/Date_into_service__c.field-meta.xml
<CustomField>
    <fullName>Date_into_service__c</fullName>
    <formula>Customer_Asset__r.In_service_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date into service</label>
    <type>Date</type>
</CustomField>