force-app/main/default/objects/Warranty_Claim__c/fields/Date_Of_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Commissioning__c</fullName>
    <label>Date Of Commissioning</label>
    <type>Date</type>
</CustomField>