force-app/main/default/objects/Warranty_Claim__c/fields/Days_Taken_To_File_The_Claim__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken_To_File_The_Claim__c</fullName>
    <inlineHelpText>FROM FAILURE TO SUBMISSION DATE</inlineHelpText>
    <label>Days Taken To File The Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>