force-app/main/default/objects/Warranty_Claim__c/fields/Days_taken_to_file_the_claim_Formula__c.field-meta.xml
<CustomField>
    <fullName>Days_taken_to_file_the_claim_Formula__c</fullName>
    <formula>TEXT(
FLOOR(Failure_date__c -  PPL_Claim_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days taken to file the claim</label>
    <type>Text</type>
</CustomField>