force-app/main/default/objects/Warranty_Claim__c/fields/Days_taken_to_repair_the_job__c.field-meta.xml
<CustomField>
    <fullName>Days_taken_to_repair_the_job__c</fullName>
    <formula>TEXT(
FLOOR( Repair_date__c - Failure_date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days taken to repair the job</label>
    <type>Text</type>
</CustomField>