force-app/main/default/objects/Warranty_Claim__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <inlineHelpText>Detailed Description of failure and the investigation/repair work undertaken</inlineHelpText>
    <label>Detailed Description</label>
    <type>TextArea</type>
</CustomField>