force-app/main/default/objects/Warranty_Claim__c/fields/Distance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Distance_Rate__c</fullName>
    <formula>0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>