force-app/main/default/objects/Warranty_Claim__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Claim (Name)</relationshipLabel>
    <relationshipName>Warranty_Claim1</relationshipName>
    <type>Lookup</type>
</CustomField>