force-app/main/default/objects/Warranty_Claim__c/fields/Engine_Removal_Time__c.field-meta.xml
<CustomField>
    <fullName>Engine_Removal_Time__c</fullName>
    <label>Engine Removal Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>