force-app/main/default/objects/Warranty_Claim__c/fields/Failure_code__c.field-meta.xml
<CustomField>
    <fullName>Failure_code__c</fullName>
    <label>Failure code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>