force-app/main/default/objects/Warranty_Claim__c/fields/Failure_date__c.field-meta.xml
<CustomField>
    <fullName>Failure_date__c</fullName>
    <label>Failure date</label>
    <type>Date</type>
</CustomField>