force-app/main/default/objects/Warranty_Claim__c/fields/Justification_For_Repair_Time__c.field-meta.xml
<CustomField>
    <fullName>Justification_For_Repair_Time__c</fullName>
    <label>Justification For Repair Time</label>
    <type>TextArea</type>
</CustomField>