force-app/main/default/objects/Warranty_Claim__c/fields/Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Labor_Rate__c</fullName>
    <label>Labor Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>