force-app/main/default/objects/Warranty_Claim__c/fields/Machine_Maker__c.field-meta.xml
<CustomField>
    <fullName>Machine_Maker__c</fullName>
    <label>Machine Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>