force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>OEM_Claim_Date__c</fullName>
    <label>OEM Claim Date</label>
    <type>Date</type>
</CustomField>