force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Claim_Number__c</fullName>
    <label>OEM Claim No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>