force-app/main/default/objects/Warranty_Claim__c/fields/OEM_claimed_amount_for_service__c.field-meta.xml
<CustomField>
    <fullName>OEM_claimed_amount_for_service__c</fullName>
    <label>OEM claimed amount for service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>