force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Day_Taken_To_File_the_Claim__c.field-meta.xml
<CustomField>
    <fullName>OEM_Day_Taken_To_File_the_Claim__c</fullName>
    <formula>TEXT(
FLOOR(OEM_Claim_Date__c - Failure_date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM  Day Taken To File the Claim</label>
    <type>Text</type>
</CustomField>