force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>OEM_Invoice_Amount__c</fullName>
    <label>OEM Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>