force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>OEM_Invoice_Date__c</fullName>
    <label>OEM Invoice Date</label>
    <type>Date</type>
</CustomField>