force-app/main/default/objects/Warranty_Claim__c/fields/OEM_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Invoice_Number__c</fullName>
    <label>OEM  Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>