force-app/main/default/objects/Warranty_Claim__c/fields/OEM_NAME__c.field-meta.xml
<CustomField>
    <fullName>OEM_NAME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Claim</relationshipLabel>
    <relationshipName>Warranty_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>