force-app/main/default/objects/Warranty_Claim__c/fields/Other_Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Description__c</fullName>
    <label>Other Cost Description</label>
    <type>TextArea</type>
</CustomField>