force-app/main/default/objects/Warranty_Claim__c/fields/Other_Cost_Justification__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Justification__c</fullName>
    <label>Other Cost Justification</label>
    <type>TextArea</type>
</CustomField>