force-app/main/default/objects/Warranty_Claim__c/fields/Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenses__c</fullName>
    <label>Other Expenses</label>
    <type>TextArea</type>
</CustomField>