force-app/main/default/objects/Warranty_Claim__c/fields/Perkins_Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Perkins_Claim_Date__c</fullName>
    <label>Perkins Claim Date</label>
    <type>Date</type>
</CustomField>