force-app/main/default/objects/Warranty_Claim__c/fields/Perkins_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Perkins_Claim_Number__c</fullName>
    <label>Perkins Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>