force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>PPL_Claim_Date__c</fullName>
    <label>PPL Claim Date</label>
    <type>Date</type>
</CustomField>