force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Claim_MEMO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PPL_Claim_MEMO_Amount__c</fullName>
    <label>PPL Claim MEMO Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>