force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>PPL_Claim_Number__c</fullName>
    <label>PPL Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>