force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Day_Taken_To_File_The_Claim__c.field-meta.xml
<CustomField>
    <fullName>PPL_Day_Taken_To_File_The_Claim__c</fullName>
    <formula>TEXT(
FLOOR( PPL_Claim_Date__c -  OEM_Claim_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPL Day Taken To File The Claim</label>
    <type>Text</type>
</CustomField>