force-app/main/default/objects/Warranty_Claim__c/fields/PPL_invoice_Amount_Service__c.field-meta.xml
<CustomField>
    <fullName>PPL_invoice_Amount_Service__c</fullName>
    <label>PPL invoice Amount (Service)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>