force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Invoice_Date_Service__c.field-meta.xml
<CustomField>
    <fullName>PPL_Invoice_Date_Service__c</fullName>
    <label>PPL Invoice Date (Service)</label>
    <type>Date</type>
</CustomField>