force-app/main/default/objects/Warranty_Claim__c/fields/PPL_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>PPL_Invoice_No__c</fullName>
    <label>PPL Invoice No. (Parts)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>