force-app/main/default/objects/Warranty_Claim__c/fields/Pre_service_Claim__c.field-meta.xml
<CustomField>
    <fullName>Pre_service_Claim__c</fullName>
    <label>Pre-service Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>