force-app/main/default/objects/Warranty_Claim__c/fields/Repair_date__c.field-meta.xml
<CustomField>
    <fullName>Repair_date__c</fullName>
    <label>Repair date</label>
    <type>Date</type>
</CustomField>