force-app/main/default/objects/Warranty_Claim__c/fields/Repair_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Time__c</fullName>
    <label>Repair Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>