force-app/main/default/objects/Warranty_Claim__c/fields/Running_Hours__c.field-meta.xml
<CustomField>
    <fullName>Running_Hours__c</fullName>
    <formula>Customer_Asset__r.Current_Running_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>