force-app/main/default/objects/Warranty_Claim__c/fields/Running_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Running_Hrs__c</fullName>
    <label>Running Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>