force-app/main/default/objects/Warranty_Claim__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Service_Request__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.End_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Warranty Claim</relationshipLabel>
    <relationshipName>Warranty_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>