force-app/main/default/objects/Warranty_Claim__c/fields/TDS_Amount_Deducted__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount_Deducted__c</fullName>
    <label>TDS Amount Deducted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>