force-app/main/default/objects/Warranty_Claim__c/fields/Total_Additional__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional__c</fullName>
    <formula>Additional_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>