force-app/main/default/objects/Warranty_Claim__c/fields/Total_Engine_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Engine_GBP__c</fullName>
    <formula>21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Engine (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>