force-app/main/default/objects/Warranty_Claim__c/fields/Total_Travel_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_GBP__c</fullName>
    <label>Total Travel (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>