force-app/main/default/objects/Warranty_Claim__c/fields/Travel_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Travel_Distance_KM__c</fullName>
    <label>Travel Distance(KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>