force-app/main/default/objects/Warranty_Claim__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <description>Travel Time(journey travel time is not paid)</description>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>