force-app/main/default/objects/Warranty_Claim__c/fields/Travel_Time_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_HH_MM__c</fullName>
    <label>Travel Time (HH.MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>