force-app/main/default/objects/Warranty_Claim__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Travel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>