force-app/main/default/objects/Warranty_Claim__c/fields/Type_Of_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Warranty__c</fullName>
    <label>Type Of Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>