force-app/main/default/objects/Warranty_Claim__c/fields/UTR_Number__c.field-meta.xml
<CustomField>
    <fullName>UTR_Number__c</fullName>
    <label>UTR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>