force-app/main/default/objects/Warranty_Claim__c/listViews/Service_Request_Queue_Warranty_Claim.listView-meta.xml
<ListView>
    <fullName>Service_Request_Queue_Warranty_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Request Queue</label>
    <queue>Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>