force-app/main/default/objects/Warranty_Claim__c/listViews/Warranty_claim_Queue_Warranty_Claim.listView-meta.xml
<ListView>
    <fullName>Warranty_claim_Queue_Warranty_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty claim Queue</label>
    <queue>Warranty_claim_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>